--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -1,44 +1,53 @@
-  .banner {
-    background-color: var(--background-theme);
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("/goit-markup-hw-08/images/background/background-mobile.jpg");
+.banner {
+  background-color: var(--background-theme);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("/goit-markup-hw-08/images/background/background-mobile.jpg");
 
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    max-height: 400px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 400px;
+  margin: 0 auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
 
-    &__title {
-      font-weight: 900;
-      color: #ffffff;
-      font-size: 26px;
-      line-height: 1.36;
-      letter-spacing: 0.06;
-      text-align: center;
-      margin: auto;
- 
-    }
-    &__button {
-      content: "";
-      background-color: var(--brand-color);
-      color: #ffffff;
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-      width: 200px;
-      height: 50px;
-      margin-top: 30px;
-      margin-bottom: 200px;
-      border-radius: 4px;
-      border: 0;
-    }
+  &__title {
+    color: #fff;
+    font-weight: 900;
+    font-size: 26px;
+    text-transform: uppercase;
+    line-height: 1.61;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 40px;
+    padding-left: 57px;
+    padding-right: 58px;
   }
+  &__button {
+    content: "";
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    width: 200px;
+    height: 50px;
+    color: #fff;
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
+    line-height: 1.87;
+    border: none;
+    padding: 10px 41px;
+  }
+}
 
 // TABLET
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -64,25 +73,22 @@
       url("/goit-markup-hw-08/images/background/background.jpg");
 
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: center;
     max-width: 1600px;
     max-height: 600px;
-    margin: 0 auto;
+    margin: auto;
+    color: #fff;
+    font-weight: 900;
+    font-size: 44px;
+    text-transform: uppercase;
+    line-height: 1.61;
+    text-align: center;
+    letter-spacing: 0.06em;
     padding-top: 200px;
     padding-bottom: 200px;
-    text-align: center;
 
     &__title {
-      font-weight: 900;
-      color: #ffffff;
       font-size: 44px;
-      line-height: 1.36;
-      letter-spacing: 0.06;
-      text-align: center;
-      margin: auto;
-      width: 696px;
-      height: 120px;
     }
     &__button {
       content: "";
@@ -92,8 +98,6 @@
         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       width: 200px;
       height: 50px;
-      margin-top: 30px;
-      margin-bottom: 200px;
       border-radius: 4px;
       border: 0;
     }
@@ -122,7 +126,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi),
-  screen and (min-width: 768px)  and (max-width: 1199px) and (min-resolution: 2dppx) {
+  screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
