--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,14 @@
 .footer {
   background-color: var(--background-theme);
   color: #ffffff;
+  font-size: 14px;
+  line-height: 1.6;
+  max-width: 100%;
 
   &__adress {
-    margin-top: 20px;
     font-style: normal;
   }
   &__contact {
-    display: flex;
     color: var(--secondary-font-color);
     font-weight: 500;
     font-size: 14px;
@@ -22,10 +23,30 @@
     }
   }
 }
-.footer-social {
-  display: flex;
-  margin-left: 70px;
-  flex-direction: column;
-  width: 206px;
-  height: 80px;
+@media screen and (min-width: 1200px) {
+  .footer {
+    background-color: var(--background-theme);
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 1.5;
+
+    &__adress {
+      margin-top: 20px;
+      font-style: normal;
+    }
+    &__contact {
+      color: var(--secondary-font-color);
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.15;
+      letter-spacing: 0.02;
+
+      &:hover {
+        color: var(--brand-color);
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      }
+    }
+  }
 }
