--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,7 +1,5 @@
 .contact-list {
-  display: flex;
-  margin-left: auto;
-  margin-right: 12px;
+display: none;
 
   &__item {
     display: flex;
@@ -32,5 +30,86 @@
 
   &__icon {
     margin-right: 10px;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1199px)
+{
+   .contact-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-right: 0px;
+
+    &__item {
+      display: flex;
+      list-style: none;
+      margin-left: 50px;
+      margin-bottom: 10px;
+    }
+
+    &__link {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      color: var(--secondary-font-color);
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.15;
+      letter-spacing: 0.02;
+      fill: #757575;
+      transition-property: color, fill;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        color: var(--brand-color);
+        fill: var(--brand-color);
+      }
+    }
+
+    &__icon {
+      margin-right: 10px;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-list {
+    display: flex;
+    margin-left: auto;
+    margin-right: 12px;
+
+    &__item {
+      display: flex;
+      list-style: none;
+      margin-left: 50px;
+    }
+
+    &__link {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      color: var(--secondary-font-color);
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.15;
+      letter-spacing: 0.02;
+      fill: #757575;
+      transition-property: color, fill;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        color: var(--brand-color);
+        fill: var(--brand-color);
+      }
+    }
+
+    &__icon {
+      margin-right: 10px;
+    }
   }
 }
