--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -1,6 +1,34 @@
-
-.section__heading {
+@media sreen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-newsletter__heading {
     font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #fff;
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+    padding-top: 60px;
+    margin-left: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-newsletter__heading {
+    display: block;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    color: #fff;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    margin-left: 70px;
+  }
+}
+.section__heading {
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.15;
 }
@@ -12,26 +40,16 @@
   margin-bottom: 30px;
   color: var(--main-font-color);
 }
-.footer-newsletter__heading {
-  display: block;
-  font-family: "Roboto";
-  font-style: normal;
+
+.social-list__heading {
   font-weight: 700;
   font-size: 14px;
-  color: #fff;
-  margin-bottom: 20px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-left: 70px;
-}
-.social-list__heading {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #fff;
-    display: block;
-    flex-basis: 100%;
-    text-align: center;
-    margin-bottom: 20px;
+  color: #fff;
+  display: block;
+  flex-basis: 100%;
+  text-align: center;
+  margin-bottom: 20px;
 }
