--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 100%;
+  min-width: 100%;
 
   &__title {
     color: #fff;
