--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,4 +3,16 @@
   min-height: 80px;
   display: flex;
   align-items: center;
+  max-width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    background-color: #fff;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    border-bottom: 1px solid #ececec;
+    min-height: 80px;
+    align-items: center;
+  }
 }
