--- a/sass/components/_lorem-ipsum__list.scss
+++ b/sass/components/_lorem-ipsum__list.scss
@@ -1,20 +1,195 @@
-.lorem-ipsum__list {
-  display: flex;
-}
+.lorem-ipsum {
+  &__list {
+    display: flex;
+    padding: 0;
+    padding-top: 94px;
+    margin-bottom: 30px;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.lorem-ipsum__item {
-  width: 270px;
-  height: 120px;
-  background-color: var(--background-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  &__item {
+    width: calc(50% - 30px);
+  }
+  &__content {
+    max-width: 450px;
+    height: 120px;
+    border-radius: 4px;
+    background-color: var(--background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-bottom: 30px;
+  }
+  &__icon {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+  }
 
-  &:not(:last-child) {
+  &__text {
+    width: 270px;
+    margin-top: 30px;
+    list-style: none;
+  }
+  &__text {
     margin-right: 30px;
   }
+
+  &__heading {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.15;
+    letter-spacing: 0.03;
+    margin-bottom: 10px;
+    display: block;
+  }
+
+  &__paragraph {
+    width: 270px;
+    height: 120px;
+    line-height: 1.5;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    display: flex;
+    justify-content: center;
+    color: var(--secondary-font-color);
+  }
 }
-.lorem-ipsum__icon {
-  width: 70px;
-  height: 70px;
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .lorem-ipsum {
+    &__list {
+      display: flex;
+      padding: 0;
+      padding-top: 94px;
+      justify-content: center;
+      margin-bottom: 30px;
+      justify-content: space-evenly;
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin: 0 15px;
+    }
+
+    &__item {
+      width: calc(50% - 30px);
+    }
+    &__content {
+      max-width: 450px;
+      height: 120px;
+      border-radius: 4px;
+      background-color: var(--background-color);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      margin-bottom: 30px;
+    }
+    &__icon {
+      width: 70px;
+      height: 70px;
+      position: absolute;
+    }
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &__text {
+      width: 270px;
+      margin-top: 30px;
+      list-style: none;
+    }
+    &__text:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &__heading {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.15;
+      letter-spacing: 0.03;
+      margin-bottom: 10px;
+      display: block;
+    }
+
+    &__paragraph {
+      width: 270px;
+      height: 120px;
+      line-height: 1.5;
+      font-size: 14px;
+      letter-spacing: 0.03em;
+      display: flex;
+      justify-content: center;
+      color: var(--secondary-font-color);
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .lorem-ipsum {
+    &__list {
+      display: flex;
+      padding: 0;
+      padding-top: 94px;
+      justify-content: center;
+      margin-bottom: 30px;
+      justify-content: space-evenly;
+      flex-direction: row;
+    }
+
+    &__item {
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    }
+    &__content {
+      width: 270px;
+      height: 120px;
+      border-radius: 4px;
+      background-color: var(--background-color);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      margin-bottom: 30px;
+    }
+    &__icon {
+      width: 70px;
+      height: 70px;
+    }
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &__text {
+      width: 270px;
+      margin-top: 30px;
+      list-style: none;
+    }
+    &__text:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &__heading {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.15;
+      letter-spacing: 0.03;
+      margin-bottom: 10px;
+      display: block;
+    }
+
+    &__paragraph {
+      width: 270px;
+      height: 120px;
+      line-height: 1.5;
+      font-size: 14px;
+      letter-spacing: 0.03em;
+      display: flex;
+      justify-content: center;
+      color: var(--secondary-font-color);
+    }
+  }
 }
