--- a/sass/components/_social-icons.scss
+++ b/sass/components/_social-icons.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 16px;
+  padding-bottom: 30px;
 
   &__item:not(:last-child) {
     margin-right: 10px;
