--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,7 +6,6 @@
 .header-container {
   display: flex;
   align-items: center;
-  min-height: 47px;
   justify-content: space-around;
   margin: 0;
 }
@@ -30,9 +29,10 @@
 }
 .footer-newsletter {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   margin-bottom: 60px;
   justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 769px) and (max-width: 1199px) {
@@ -58,7 +58,6 @@
   }
   .footer-logo {
     max-width: 480px;
-    padding-top: 60px;
     padding-bottom: 60px;
     text-align: center;
   }
@@ -99,7 +98,7 @@
   }
   .footer-logo {
     min-width: 280px;
-    padding-top: 60px;
+
     padding-bottom: 60px;
     text-align: start;
   }
@@ -112,9 +111,9 @@
   }
   .footer-newsletter {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-bottom: 0;
-    padding-top: 60px;
+    margin-left: 78px;
   }
 }
 
