--- a/sass/components/_client-list.scss
+++ b/sass/components/_client-list.scss
@@ -1,12 +1,14 @@
 .client__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
   list-style: none;
 }
 
 .client__link {
   display: flex;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -24,4 +26,71 @@
 .client__icon {
   width: 106px;
   height: 60px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .client {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .client__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    max-width: 768px;
+    list-style: none;
+  }
+
+  .client__link {
+    display: flex;
+    width: 226px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+      fill: var(--brand-color);
+      border: 1px solid var(--brand-color);
+    }
+  }
+  .client__icon {
+    width: 106px;
+    height: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+  }
+
+  .client__link {
+    display: flex;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+      fill: var(--brand-color);
+      border: 1px solid var(--brand-color);
+    }
+  }
+  .client__icon {
+    width: 106px;
+    height: 60px;
+  }
 }
