--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -1,3 +1,16 @@
+.footer-newsletter__heading {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  padding-top: 60px;
+  margin-left: 0px;
+}
 @media sreen and (min-width: 768px) and (max-width: 1199px) {
   .footer-newsletter__heading {
     font-weight: 700;
