--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,18 @@
 .header__logo {
+  width: 134px;
+  height: 28px;
+  left: 15px;
+  top: 26px;
+
   font-family: "Raleway";
+  font-style: normal;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.4;
-  letter-spacing: 0, 03;
-  margin-right: 93px;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  margin-right: 83px;
+  margin-left: 15px;
+
 
   &--brand-color {
     color: var(--brand-color);
@@ -19,10 +27,78 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
 
-&--brand {
-  color: var(--brand-color);
+  &--brand {
+    color: var(--brand-color);
+  }
+  &--white {
+    color: var(--white);
+  }
 }
-&--white {
-  color: var(--white);
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__logo {
+    width: 134px;
+    height: 28px;
+    left: 15px;
+    top: 26px;
+
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    margin-right: 83px;
+    margin-left: 15px;
+
+    &--brand-color {
+      color: var(--brand-color);
+    }
+  }
+
+  .footer__logo {
+    font-family: "Raleway", "sans-serif";
+    font-weight: 700;
+    font-size: 26px;
+    font-style: normal;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+
+    &--brand {
+      color: var(--brand-color);
+    }
+    &--white {
+      color: var(--white);
+    }
+  }
 }
+
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.4;
+    letter-spacing: 0, 03;
+    margin-right: 93px;
+
+    &--brand-color {
+      color: var(--brand-color);
+    }
+  }
+
+  .footer__logo {
+    font-family: "Raleway", "sans-serif";
+    font-weight: 700;
+    font-size: 26px;
+    font-style: normal;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+
+    &--brand {
+      color: var(--brand-color);
+    }
+    &--white {
+      color: var(--white);
+    }
+  }
 }
