--- a/sass/components/_lorem-ipsum__list.scss
+++ b/sass/components/_lorem-ipsum__list.scss
@@ -3,14 +3,10 @@
     display: flex;
     padding: 0;
     padding-top: 94px;
-    margin-bottom: 30px;
     flex-direction: column;
     align-items: center;
   }
 
-  &__item {
-    width: calc(50% - 30px);
-  }
   &__content {
     max-width: 450px;
     height: 120px;
@@ -20,7 +16,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-bottom: 30px;
   }
   &__icon {
     width: 70px;
@@ -65,11 +60,10 @@
       padding: 0;
       padding-top: 94px;
       justify-content: center;
-      margin-bottom: 30px;
       justify-content: space-evenly;
       flex-direction: row;
       flex-wrap: wrap;
-      margin: 0 15px;
+      gap: 30px;
     }
 
     &__item {
