--- a/sass/components/_wrap.scss
+++ b/sass/components/_wrap.scss
@@ -1,6 +1,87 @@
 .wrap {
-  margin-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 30px;
+  padding-bottom: 60px;
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  &__item {
+    list-style: none;
+  }
+}
+
+
+.figure-box {
+  margin: 0;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow: hidden;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.figure-box:hover .overlay {
+  transform: translateY(0);
+}
+.overlay__paragraph {
+  color: #fff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  background-color: rgba(33, 150, 243, 0.9);
+  max-width: 354px;
+  height: 294px;
+  margin: 0;
+  padding-top: 49px;
+  padding-left: 24px;
+  padding-right: 45px;
+}
+.description-background {
+  background-color: var(--background-color);
+}
+.wrap__box {
+  height: 110px;
+  margin: 0px;
+  margin-top: -6px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  background-color: #fff;
+  position: relative;
+  z-index: 50;
+}
+.wrap__img-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06;
+  margin-left: 24px;
+  padding-top: 20px;
+}
+.wrap__img-description {
+  color: var(--secondary-font-color);
+  margin-left: 24px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1299px) {
+
+.wrap {
+  margin-top: 30px;
+  padding-bottom: 60px;
 
   &__list {
     display: flex;
@@ -75,4 +156,87 @@
 .wrap__img-description {
   color: var(--secondary-font-color);
   margin-left: 24px;
+}
+}
+
+
+
+@media screen and (min-width: 1200px) {
+
+.wrap {
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  &__item {
+    list-style: none;
+  }
+}
+
+
+.figure-box {
+  margin: 0;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow: hidden;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.figure-box:hover .overlay {
+  transform: translateY(0);
+}
+.overlay__paragraph {
+  color: #fff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  background-color: rgba(33, 150, 243, 0.9);
+  width: 370px;
+  height: 294px;
+  margin: 0;
+  padding-top: 49px;
+  padding-left: 24px;
+  padding-right: 45px;
+}
+.description-background {
+  background-color: var(--background-color);
+}
+.wrap__box {
+  height: 110px;
+  margin: 0px;
+  margin-top: -6px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  background-color: #fff;
+  position: relative;
+  z-index: 50;
+}
+.wrap__img-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06;
+  margin-left: 24px;
+  padding-top: 20px;
+}
+.wrap__img-description {
+  color: var(--secondary-font-color);
+  margin-left: 24px;
+}
 }
