--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,4 +1,10 @@
 .navigation-list {
+  display: none;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+
+.navigation-list {
   display: flex;
 }
 .navigation-list__item {
@@ -33,4 +39,45 @@
   &:focus {
     color: var(--brand-color);
   }
+}
+}
+
+@media screen and (min-width: 1200px){
+
+.navigation-list {
+  display: flex;
+}
+.navigation-list__item {
+  position: relative;
+  list-style: none;
+
+  &:not(:last-child) {
+    margin-right: 46px;
+  }
+}
+.navigation-list__item--active::after {
+  content: "";
+  display: block;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--brand-color);
+  position: absolute;
+  top: 45px;
+}
+
+.navigation-list__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.02;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--brand-color);
+  }
+}
 }
