--- a/sass/components/_hamburger.scss
+++ b/sass/components/_hamburger.scss
@@ -1,30 +1,28 @@
 .hamburger {
-    display: flex;
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  display: flex;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 
-    &__button-open{
-        width: 24px;
-        height: 16px;
-        border: none;
-        color: #fff;
-        background-color: #fff;
-    }
-    }
-
+  &__button-open {
+    width: 24px;
+    height: 16px;
+    border: none;
+    color: #fff;
+    background-color: #fff;
+  }
+}
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-    
-.hamburger {
+  .hamburger {
     display: none;
-}
+  }
 }
 
 @media screen and (min-width: 1200px) {
-    .hamburger {
-        display: none;
-    }
+  .hamburger {
+    display: none;
+  }
 }
 .hamburger-container {
   position: fixed;
@@ -32,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:red;
+  background-color: #fff;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
   font-family: "Roboto", "sans-serif";
@@ -45,12 +43,10 @@
   z-index: 1002;
 }
 
-.hamburger-list-container {
-  padding-top: 100px;
+.hamburger-content {
+  padding-top: 48px;
   padding-left: 40px;
 }
-
-// JS & toggle buttons
 
 .js-menu-container.is-open {
   transform: translateX(0);
@@ -64,65 +60,62 @@
 }
 
 .hamburger__close-btn {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   position: absolute;
-  left: 73%;
-  top: 3%;
+  right: 10px;
+  top: 15px;
   background-color: rgba(0, 0, 0, 0);
 }
 
 .hamburger__x {
-    width: 70px;
-    height: 70px;
+  width: 18px;
+  height: 18px;
+}
+.hamburger-content__list {
+  margin-bottom: 302px;
+}
+.hamburger-content__link {
+  color: var(--black);
+}
+.hamburger-content__link--active {
+  color: var(--brand-color);
 }
 
-// Menu links
-
-.hamburger-list-container__link {
-  color: var(--text-black);
-}
-.hamburger-list-container__link--active {
-  color: var(--blue);
-}
-
-.hamburger-list-container__link--phone {
+.hamburger-content__link--phone {
   font-weight: 500;
   font-size: 34px;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  color: var(--blue);
+  color: var(--brand-color);
 }
 
-.hamburger-list-container__link--mail {
+.hamburger-content__link--mail {
   font-weight: 500;
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
-  color: var(--text-grey);
+  color: var(--secondary-font-color);
 }
 
-.hamburger-list-container__link:active {
-  color: var(--blue);
+.hamburger-content__link:active {
+  color: var(--brand-color);
 }
 
-.hamburger-list-container__item {
+.hamburger-content__item {
   margin-bottom: 36px;
 }
 
-.hamburger-list-container__item--first {
-  margin-top: 202px;
+.hamburger-content__item--first {
   margin-bottom: 32px;
 }
 
-.hamburger-list-container__item--second {
+.hamburger-content__item--second {
   margin-bottom: 64px;
 }
 
-// Social links
-
 .hamburger-social {
-  color: var(--blue);
+  color: var(--brand-color);
   display: flex;
   font-size: 18px;
   line-height: 1.22;
