--- a/sass/main.css
+++ b/sass/main.css
@@ -1412,12 +1412,10 @@ img {
   font-size: 18px;
   line-height: 28px;
   background-color: rgba(33, 150, 243, 0.9);
-  max-width: 354px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   margin: 0;
-  padding-top: 49px;
-  padding-left: 24px;
-  padding-right: 45px;
+  padding: 77px 24px;
 }
 
 .description-background {
@@ -1563,9 +1561,7 @@ img {
     width: 370px;
     height: 294px;
     margin: 0;
-    padding-top: 49px;
-    padding-left: 24px;
-    padding-right: 45px;
+    padding: 49px 24px;
   }
   .description-background {
     background-color: var(--background-color);
@@ -1801,7 +1797,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: #fff;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
   font-family: "Roboto", "sans-serif";
@@ -1814,8 +1810,8 @@ img {
   z-index: 1002;
 }
 
-.hamburger-list-container {
-  padding-top: 100px;
+.hamburger-content {
+  padding-top: 48px;
   padding-left: 40px;
 }
 
@@ -1831,62 +1827,65 @@ img {
 }
 
 .hamburger__close-btn {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   position: absolute;
-  left: 73%;
-  top: 3%;
+  right: 10px;
+  top: 15px;
   background-color: rgba(0, 0, 0, 0);
 }
 
 .hamburger__x {
-  width: 70px;
-  height: 70px;
+  width: 18px;
+  height: 18px;
 }
 
-.hamburger-list-container__link {
-  color: var(--text-black);
+.hamburger-content__list {
+  margin-bottom: 302px;
 }
 
-.hamburger-list-container__link--active {
-  color: var(--blue);
+.hamburger-content__link {
+  color: var(--black);
 }
 
-.hamburger-list-container__link--phone {
+.hamburger-content__link--active {
+  color: var(--brand-color);
+}
+
+.hamburger-content__link--phone {
   font-weight: 500;
   font-size: 34px;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  color: var(--blue);
+  color: var(--brand-color);
 }
 
-.hamburger-list-container__link--mail {
+.hamburger-content__link--mail {
   font-weight: 500;
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
-  color: var(--text-grey);
+  color: var(--secondary-font-color);
 }
 
-.hamburger-list-container__link:active {
-  color: var(--blue);
+.hamburger-content__link:active {
+  color: var(--brand-color);
 }
 
-.hamburger-list-container__item {
+.hamburger-content__item {
   margin-bottom: 36px;
 }
 
-.hamburger-list-container__item--first {
-  margin-top: 202px;
+.hamburger-content__item--first {
   margin-bottom: 32px;
 }
 
-.hamburger-list-container__item--second {
+.hamburger-content__item--second {
   margin-bottom: 64px;
 }
 
 .hamburger-social {
-  color: var(--blue);
+  color: var(--brand-color);
   display: flex;
   font-size: 18px;
   line-height: 1.22;
