--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -30,6 +30,7 @@
     color: #ffffff;
     font-size: 16px;
     line-height: 1.5;
+    padding-top: 0px;
 
     &__adress {
       margin-top: 20px;
