--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -39,6 +39,7 @@
   .container {
     max-width: 100%;
     align-items: center;
+    padding: 0px;
   }
   .header-container {
     display: flex;
@@ -58,13 +59,13 @@
   }
   .footer-logo {
     max-width: 480px;
-    padding-bottom: 60px;
+    padding: 0px;
     text-align: center;
   }
   .footer-social {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 60px;
+    margin: 0px;
     text-align: center;
   }
   .footer-newsletter {
@@ -73,7 +74,7 @@
     flex-direction: column;
     margin-bottom: 60px;
     text-align: center;
-    margin: 0 auto;
+    margin: 0 400px;
   }
 }
 
