--- a/sass/components/_button-list.scss
+++ b/sass/components/_button-list.scss
@@ -4,11 +4,109 @@
 
 &__list {
   display: flex;
+  flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
+  max-width: 400px;
 }
-}
+
 .button__item {
+  margin-bottom: 15px;
+  padding: 6px 22px;
+  background-color: var(--background-color);
+  color: var(--main-font-color);
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 500;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  border-radius: 4px;
+  font-family: inherit;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:not(first-child) {
+    margin-right: 8px;
+  }
+  &:hover,
+  &:focus {
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+  }
+}
+}
+
+
+@media screen and (min-width:768px) and (max-width: 1199px) {
+
+.button {
+  padding-bottom: 0px;
+
+
+&__list {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  flex-wrap: none;
+  max-width: 700px;
+}
+
+.button__item {
+  margin-left: 6px;
+  padding: 6px 22px;
+  background-color: var(--background-color);
+  color: var(--main-font-color);
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 500;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  border-radius: 4px;
+  font-family: inherit;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:not(first-child) {
+    margin-right: 8px;
+  }
+  &:hover,
+  &:focus {
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+  }
+}
+}
+}
+
+
+@media screen and (min-width:1200px) {
+
+.button {
+  padding-bottom: 0px;
+
+
+&__list {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  flex-wrap: none;
+  max-width: 700px;
+}
+
+.button__item {
+  text-align: center;
   margin-left: 8px;
   padding: 6px 22px;
   background-color: var(--background-color);
@@ -37,4 +135,6 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
     cursor: pointer;
   }
+}
+}
 }
