--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -108,6 +108,9 @@
   }
 }
 @media screen and (min-width: 1200px) {
+  .footer-newsletter {
+    align-items: flex-start;
+  }
   .footer-newsletter-form {
     display: flex;
     align-items: center;
