--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -93,6 +93,7 @@
     font-style: normal;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    margin-bottom: 20px;
 
     &--brand {
       color: var(--brand-color);
