--- a/sass/components/_lorem-ipsum__list.scss
+++ b/sass/components/_lorem-ipsum__list.scss
@@ -5,10 +5,11 @@
     padding-top: 94px;
     flex-direction: column;
     align-items: center;
+    max-width: 100%;
   }
 
   &__content {
-    max-width: 450px;
+
     height: 120px;
     border-radius: 4px;
     background-color: var(--background-color);
@@ -54,7 +55,8 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .lorem-ipsum {
+  .lorem-ipsum 
+  {
     &__list {
       display: flex;
       padding: 0;
@@ -63,7 +65,6 @@
       justify-content: space-evenly;
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 30px;
     }
 
     &__item {
@@ -84,10 +85,6 @@
       width: 70px;
       height: 70px;
       position: absolute;
-    }
-
-    &:not(:last-child) {
-      margin-right: 30px;
     }
 
     &__text {
