--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -18,16 +18,17 @@
   align-items: center;
 
   &__title {
-    color: #fff;
+    max-width: 365px;
+    height: 84px;
+
+    font-family: "Roboto";
+    font-style: normal;
     font-weight: 900;
     font-size: 26px;
-    text-transform: uppercase;
-    line-height: 1.61;
-    letter-spacing: 0.06em;
+    line-height: 42px;
+    color: #fff;
     text-align: center;
-    margin-bottom: 40px;
-    padding-left: 57px;
-    padding-right: 58px;
+    margin-bottom: 30px;
   }
   &__button {
     content: "";
@@ -58,6 +59,8 @@
       ),
       url("/goit-markup-hw-08/images/background/background-tablet.png");
   }
+  
+  
 }
 
 // DESKTOP
@@ -88,6 +91,17 @@
 
     &__title {
       font-size: 44px;
+      max-width: 692px;
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 60px;
+      text-align: center;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      padding: 0;
+      margin-bottom: 60px;
     }
     &__button {
       content: "";
@@ -101,12 +115,6 @@
       border: 0;
     }
   }
-}
-.button:hover,
-.button:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  cursor: pointer;
 }
 
 // Retina
