--- a/sass/main.css
+++ b/sass/main.css
@@ -116,6 +116,7 @@ img {
   .container {
     max-width: 100%;
     align-items: center;
+    padding: 0px;
   }
   .header-container {
     display: flex;
@@ -135,13 +136,13 @@ img {
   }
   .footer-logo {
     max-width: 480px;
-    padding-bottom: 60px;
+    padding: 0px;
     text-align: center;
   }
   .footer-social {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 60px;
+    margin: 0px;
     text-align: center;
   }
   .footer-newsletter {
@@ -150,7 +151,7 @@ img {
     flex-direction: column;
     margin-bottom: 60px;
     text-align: center;
-    margin: 0 auto;
+    margin: 0 400px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -303,16 +304,16 @@ img {
   align-items: center;
 }
 .banner__title {
-  color: #fff;
+  max-width: 365px;
+  height: 84px;
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 900;
   font-size: 26px;
-  text-transform: uppercase;
-  line-height: 1.61;
-  letter-spacing: 0.06em;
+  line-height: 42px;
+  color: #fff;
   text-align: center;
-  margin-bottom: 40px;
-  padding-left: 57px;
-  padding-right: 58px;
+  margin-bottom: 30px;
 }
 .banner__button {
   content: "";
@@ -358,6 +359,17 @@ img {
   }
   .banner__title {
     font-size: 44px;
+    max-width: 692px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    padding: 0;
+    margin-bottom: 60px;
   }
   .banner__button {
     content: "";
@@ -370,12 +382,6 @@ img {
     border: 0;
   }
 }
-.button:hover,
-.button:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  cursor: pointer;
-}
-
 @media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/goit-markup-hw-08/images/background/background-mobilex2.jpg");
@@ -417,6 +423,7 @@ img {
     color: #ffffff;
     font-size: 16px;
     line-height: 1.5;
+    padding-top: 0px;
   }
   .footer__adress {
     margin-top: 20px;
@@ -521,6 +528,7 @@ img {
     font-style: normal;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    margin-bottom: 20px;
   }
   .footer__logo--brand {
     color: var(--brand-color);
@@ -534,7 +542,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 16px;
   padding-bottom: 30px;
 }
 .social-list__item:not(:last-child) {
@@ -621,7 +628,7 @@ img {
     color: #fff;
     margin-bottom: 20px;
     text-transform: uppercase;
-    margin-left: 70px;
+    margin-left: 0px;
   }
 }
 .section__heading {
@@ -648,7 +655,6 @@ img {
   color: #fff;
   display: block;
   flex-basis: 100%;
-  text-align: center;
   margin-bottom: 20px;
 }
 
@@ -657,12 +663,13 @@ img {
 }
 .button__list {
   display: flex;
+  flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
+  max-width: 400px;
 }
-
-.button__item {
-  margin-left: 8px;
+.button .button__item {
+  margin-bottom: 15px;
   padding: 6px 22px;
   background-color: var(--background-color);
   color: var(--main-font-color);
@@ -677,16 +684,91 @@ img {
   font-family: inherit;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button__item:not(first-child) {
+.button .button__item:not(first-child) {
   margin-right: 8px;
 }
-.button__item:hover, .button__item:focus {
+.button .button__item:hover, .button .button__item:focus {
   background-color: var(--brand-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .button {
+    padding-bottom: 0px;
+  }
+  .button__list {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: none;
+    max-width: 700px;
+  }
+  .button .button__item {
+    margin-left: 6px;
+    padding: 6px 22px;
+    background-color: var(--background-color);
+    color: var(--main-font-color);
+    font-size: 16px;
+    line-height: 1.6;
+    font-weight: 500;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    border-radius: 4px;
+    font-family: inherit;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button .button__item:not(first-child) {
+    margin-right: 8px;
+  }
+  .button .button__item:hover, .button .button__item:focus {
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .button {
+    padding-bottom: 0px;
+  }
+  .button__list {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: none;
+    max-width: 700px;
+  }
+  .button .button__item {
+    text-align: center;
+    margin-left: 8px;
+    padding: 6px 22px;
+    background-color: var(--background-color);
+    color: var(--main-font-color);
+    font-size: 16px;
+    line-height: 1.6;
+    font-weight: 500;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    border-radius: 4px;
+    font-family: inherit;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button .button__item:not(first-child) {
+    margin-right: 8px;
+  }
+  .button .button__item:hover, .button .button__item:focus {
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+  }
+}
 .contact-list {
   display: none;
 }
@@ -791,9 +873,9 @@ img {
   padding-top: 94px;
   flex-direction: column;
   align-items: center;
+  max-width: 100%;
 }
 .lorem-ipsum__content {
-  max-width: 450px;
   height: 120px;
   border-radius: 4px;
   background-color: var(--background-color);
@@ -843,7 +925,6 @@ img {
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 30px;
   }
   .lorem-ipsum__item {
     width: calc(50% - 30px);
@@ -863,9 +944,6 @@ img {
     width: 70px;
     height: 70px;
     position: absolute;
-  }
-  .lorem-ipsum:not(:last-child) {
-    margin-right: 30px;
   }
   .lorem-ipsum__text {
     width: 270px;
@@ -1282,6 +1360,9 @@ img {
   }
 }
 @media screen and (min-width: 1200px) {
+  .footer-newsletter {
+    align-items: flex-start;
+  }
   .footer-newsletter-form {
     display: flex;
     align-items: center;
@@ -1339,12 +1420,13 @@ img {
 }
 .button__list {
   display: flex;
+  flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
+  max-width: 400px;
 }
-
-.button__item {
-  margin-left: 8px;
+.button .button__item {
+  margin-bottom: 15px;
   padding: 6px 22px;
   background-color: var(--background-color);
   color: var(--main-font-color);
@@ -1359,16 +1441,91 @@ img {
   font-family: inherit;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button__item:not(first-child) {
+.button .button__item:not(first-child) {
   margin-right: 8px;
 }
-.button__item:hover, .button__item:focus {
+.button .button__item:hover, .button .button__item:focus {
   background-color: var(--brand-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .button {
+    padding-bottom: 0px;
+  }
+  .button__list {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: none;
+    max-width: 700px;
+  }
+  .button .button__item {
+    margin-left: 6px;
+    padding: 6px 22px;
+    background-color: var(--background-color);
+    color: var(--main-font-color);
+    font-size: 16px;
+    line-height: 1.6;
+    font-weight: 500;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    border-radius: 4px;
+    font-family: inherit;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button .button__item:not(first-child) {
+    margin-right: 8px;
+  }
+  .button .button__item:hover, .button .button__item:focus {
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .button {
+    padding-bottom: 0px;
+  }
+  .button__list {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: none;
+    max-width: 700px;
+  }
+  .button .button__item {
+    text-align: center;
+    margin-left: 8px;
+    padding: 6px 22px;
+    background-color: var(--background-color);
+    color: var(--main-font-color);
+    font-size: 16px;
+    line-height: 1.6;
+    font-weight: 500;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    border-radius: 4px;
+    font-family: inherit;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button .button__item:not(first-child) {
+    margin-right: 8px;
+  }
+  .button .button__item:hover, .button .button__item:focus {
+    background-color: var(--brand-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+  }
+}
 .wrap {
   margin-top: 30px;
   padding-bottom: 60px;
