--- a/sass/components/_lorem-ipsum__list.scss
+++ b/sass/components/_lorem-ipsum__list.scss
@@ -9,7 +9,7 @@
   }
 
   &__content {
-
+width: 100%;
     height: 120px;
     border-radius: 4px;
     background-color: var(--background-color);
@@ -25,7 +25,7 @@
   }
 
   &__text {
-    width: 270px;
+    max-width: 450px;
     margin-top: 30px;
     list-style: none;
   }
@@ -40,10 +40,11 @@
     letter-spacing: 0.03;
     margin-bottom: 10px;
     display: block;
+    text-align: center;
   }
 
   &__paragraph {
-    width: 270px;
+    max-width: 767px;
     height: 120px;
     line-height: 1.5;
     font-size: 14px;
@@ -106,7 +107,7 @@
     }
 
     &__paragraph {
-      width: 270px;
+      max-width:450px;
       height: 120px;
       line-height: 1.5;
       font-size: 14px;
@@ -170,6 +171,7 @@
       letter-spacing: 0.03;
       margin-bottom: 10px;
       display: block;
+      text-align: left;
     }
 
     &__paragraph {
