--- a/sass/components/_lorem-ipsum__list.scss
+++ b/sass/components/_lorem-ipsum__list.scss
@@ -5,11 +5,10 @@
     padding-top: 94px;
     flex-direction: column;
     align-items: center;
-    max-width: 100%;
+    width: 100%;
   }
 
   &__content {
-width: 100%;
     height: 120px;
     border-radius: 4px;
     background-color: var(--background-color);
@@ -19,18 +18,9 @@ width: 100%;
     position: relative;
   }
   &__icon {
-    width: 70px;
+    width: 100%;
     height: 70px;
     position: absolute;
-  }
-
-  &__text {
-    max-width: 450px;
-    margin-top: 30px;
-    list-style: none;
-  }
-  &__text {
-    margin-right: 30px;
   }
 
   &__heading {
@@ -56,8 +46,7 @@ width: 100%;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .lorem-ipsum 
-  {
+  .lorem-ipsum {
     &__list {
       display: flex;
       padding: 0;
@@ -68,11 +57,7 @@ width: 100%;
       flex-wrap: wrap;
     }
 
-    &__item {
-      width: calc(50% - 30px);
-    }
     &__content {
-      width: 100%;
       height: 120px;
       border-radius: 4px;
       background-color: var(--background-color);
@@ -88,14 +73,6 @@ width: 100%;
       position: absolute;
     }
 
-    &__text {
-      width: 270px;
-      margin-top: 30px;
-      list-style: none;
-    }
-    &__text:not(:last-child) {
-      margin-right: 30px;
-    }
 
     &__heading {
       font-weight: 700;
@@ -107,7 +84,7 @@ width: 100%;
     }
 
     &__paragraph {
-      max-width:450px;
+      width: 100%;
       height: 120px;
       line-height: 1.5;
       font-size: 14px;
@@ -118,6 +95,7 @@ width: 100%;
     }
   }
 }
+
 @media screen and (min-width: 1200px) {
   .lorem-ipsum {
     &__list {
@@ -155,14 +133,6 @@ width: 100%;
       margin-right: 30px;
     }
 
-    &__text {
-      width: 270px;
-      margin-top: 30px;
-      list-style: none;
-    }
-    &__text:not(:last-child) {
-      margin-right: 30px;
-    }
 
     &__heading {
       font-weight: 700;
